# CardgameEngine

./: .gitmodules  2CMakeLists.txt  CMakeLists.txt  run.bat
include/: Button.h  Card.h  Window.h  game.h
src/: Button.cpp  Window.cpp  game.cpp  main.cpp  main2.cpp
unix/: bnr.sh  build.sh  make.sh  run.sh
win/: bnr.bat  build.bat  make.bat  run.bat
